--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "firebase": "^9.10.0",
+    "framer-motion": "^7.3.6",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.0"
   },
   "devDependencies": {
