--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "react-spinners": "^0.13.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
